--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.pwall.json</groupId>
   <artifactId>json-ktor-client</artifactId>
-  <version>0.1</version>
+  <version>0.2</version>
   <name>JSON functionality for ktor HTTP clients</name>
   <description>This library provides ktor client interface integration for the json-kotlin library.</description>
   <packaging>jar</packaging>
@@ -67,12 +67,22 @@
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>json-kotlin</artifactId>
-      <version>2.0</version>
+      <version>2.1</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>jsonutil</artifactId>
-      <version>2.0</version>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.json</groupId>
+      <artifactId>json-stream</artifactId>
+      <version>0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
+      <artifactId>pipelines</artifactId>
+      <version>0.5</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.util</groupId>
