--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.pwall.json</groupId>
   <artifactId>json-ktor-client</artifactId>
-  <version>0.4</version>
+  <version>0.5</version>
   <name>JSON functionality for ktor HTTP clients</name>
   <description>This library provides ktor client interface integration for the json-kotlin library.</description>
   <packaging>jar</packaging>
@@ -13,12 +13,12 @@
   <parent>
     <groupId>net.pwall.maven</groupId>
     <artifactId>maven-kotlin</artifactId>
-    <version>1.0</version>
+    <version>1.2</version>
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <ktor.version>1.2.4</ktor.version>
+    <ktor.version>1.3.0</ktor.version>
   </properties>
 
   <licenses>
@@ -66,8 +66,13 @@
   <dependencies>
     <dependency>
       <groupId>net.pwall.json</groupId>
+      <artifactId>json-ktor</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.json</groupId>
       <artifactId>json-kotlin</artifactId>
-      <version>3.0</version>
+      <version>3.6</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -82,7 +87,17 @@
     <dependency>
       <groupId>net.pwall.util</groupId>
       <artifactId>pipelines</artifactId>
-      <version>0.6</version>
+      <version>0.8</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
+      <artifactId>co-pipelines</artifactId>
+      <version>0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.json</groupId>
+      <artifactId>json-co-stream</artifactId>
+      <version>0.3</version>
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
@@ -117,7 +132,7 @@
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>json-kotlin-test-classes</artifactId>
-      <version>0.2</version>
+      <version>1.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
